<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_16"
    android:layout_marginTop="@dimen/margin_16"
    android:layout_marginRight="@dimen/margin_16"
    app:cardCornerRadius="@dimen/margin_8"
    app:cardElevation="@dimen/margin_4">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16">

        <ImageView
            android:id="@+id/image_status"
            android:layout_width="@dimen/avatar_width_small"
            android:layout_height="@dimen/avatar_height_small"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:padding="@dimen/margin_4"
            android:src="@drawable/ic_git_merged"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_pull_title"
            style="@style/PullRequestTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/image_status"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Add main resources" />

        <TextView
            android:id="@+id/text_opened_at"
            style="@style/PullRequestLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_pull_request_opened_at"
            app:layout_constraintLeft_toRightOf="@id/image_status"
            app:layout_constraintRight_toLeftOf="@id/text_opened_at_value"
            app:layout_constraintTop_toBottomOf="@id/text_pull_title"
            tools:text="opened at" />

        <TextView
            android:id="@+id/text_opened_at_value"
            style="@style/PullRequestLabelValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/text_opened_at"
            app:layout_constraintLeft_toRightOf="@id/text_opened_at"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_opened_at"
            tools:text="opened at" />

        <TextView
            android:id="@+id/text_closed_at"
            style="@style/PullRequestLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_pull_request_closed_at"
            app:layout_constraintLeft_toRightOf="@id/image_status"
            app:layout_constraintRight_toLeftOf="@id/text_closed_at_value"
            app:layout_constraintTop_toBottomOf="@id/text_opened_at"
            tools:text="closed at" />

        <TextView
            android:id="@+id/text_closed_at_value"
            style="@style/PullRequestLabelValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/text_closed_at"
            app:layout_constraintLeft_toRightOf="@id/text_closed_at"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_closed_at"
            tools:text="closed at" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_70"
            app:layout_constraintBottom_toTopOf="@id/text_author_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_closed_at" />

        <ImageView
            android:id="@+id/image_author_avatar"
            android:layout_width="@dimen/avatar_width_small"
            android:layout_height="@dimen/avatar_height_small"
            android:layout_marginTop="@dimen/margin_8"
            android:src="@drawable/ic_splash"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/text_author"
            style="@style/PullRequestLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_author"
            app:layout_constraintLeft_toRightOf="@id/image_author_avatar"
            app:layout_constraintRight_toLeftOf="@id/text_author_value"
            app:layout_constraintTop_toTopOf="@id/image_author_avatar" />

        <TextView
            android:id="@+id/text_author_value"
            style="@style/PullRequestLabelValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/text_author"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintLeft_toRightOf="@id/text_author"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_author_avatar"
            tools:text="Lakshmi Narasimha B" />

        <TextView
            android:id="@+id/text_more_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="@dimen/margin_24"
            android:paddingEnd="@dimen/margin_24"
            android:text="@string/more_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_author_avatar"
            app:drawableRightCompat="@drawable/ic_arrow_drop_down_24" />

        <TextView
            android:id="@+id/text_base_branch"
            style="@style/PullRequestLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_base_branch"
            app:layout_constraintLeft_toRightOf="@id/image_author_avatar"
            app:layout_constraintRight_toLeftOf="@id/text_base_branch_value"
            app:layout_constraintTop_toBottomOf="@id/text_more_info"
            tools:text="@string/label_base_branch" />

        <TextView
            android:id="@+id/text_base_branch_value"
            style="@style/PullRequestLabelValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/text_base_branch"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintLeft_toRightOf="@id/text_base_branch"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_author_avatar"
            tools:text="Lakshmi Narasimha B" />

        <TextView
            android:id="@+id/text_head_branch"
            style="@style/PullRequestLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_head_branch"
            app:layout_constraintLeft_toRightOf="@id/image_author_avatar"
            app:layout_constraintRight_toLeftOf="@id/text_head_branch_value"
            app:layout_constraintTop_toBottomOf="@id/text_base_branch" />

        <TextView
            android:id="@+id/text_head_branch_value"
            style="@style/PullRequestLabelValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@id/text_head_branch"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintLeft_toRightOf="@id/text_head_branch"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/image_author_avatar"
            tools:text="Lakshmi Narasimha B" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/extra_info_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="text_head_branch, text_head_branch_value, text_base_branch, text_base_branch_value" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
